# abseil-cpp-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_64_cxx_standard11shared_libsOFF.yaml  linux_64_cxx_standard14shared_libsOFF.yaml  linux_64_cxx_standard17shared_libsOFF.yaml  linux_64_cxx_standard17shared_libsON.yaml  linux_aarch64_.yaml  linux_aarch64_cxx_standard11shared_libsOFF.yaml  linux_aarch64_cxx_standard14shared_libsOFF.yaml  linux_aarch64_cxx_standard17shared_libsOFF.yaml  linux_aarch64_cxx_standard17shared_libsON.yaml  linux_ppc64le_.yaml  linux_ppc64le_cxx_standard11shared_libsOFF.yaml  linux_ppc64le_cxx_standard14shared_libsOFF.yaml  linux_ppc64le_cxx_standard17shared_libsOFF.yaml  linux_ppc64le_cxx_standard17shared_libsON.yaml  osx_.yaml  osx_64_.yaml  osx_64_cxx_standard11shared_libsOFF.yaml  osx_64_cxx_standard14shared_libsOFF.yaml  osx_64_cxx_standard17shared_libsOFF.yaml  osx_64_cxx_standard17shared_libsON.yaml  osx_arm64_.yaml  osx_arm64_cxx_standard11shared_libsOFF.yaml  osx_arm64_cxx_standard14shared_libsOFF.yaml  osx_arm64_cxx_standard17shared_libsOFF.yaml  osx_arm64_cxx_standard17shared_libsON.yaml  win_64_.yaml  win_64_cxx_standard11.yaml  win_64_cxx_standard11shared_libsOFF.yaml  win_64_cxx_standard14.yaml  win_64_cxx_standard14shared_libsOFF.yaml  win_64_cxx_standard17.yaml  win_64_cxx_standard17shared_libsOFF.yaml  (+2 more)
recipe/cmake_test/: CMakeLists.txt  flags_example.cpp
(+77 files in other folders)
